--- a/QuanLyCTCN/Views/Shared/_AdminLayout.cshtml
+++ b/QuanLyCTCN/Views/Shared/_AdminLayout.cshtml
@@ -2,6 +2,10 @@
     Layout = "_Layout";
 }
 
+@section Styles {
+    @await RenderSectionAsync("Styles", required: false)
+}
+
 @section HeaderActions {
     <div class="dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" id="addActionDropdown" data-bs-toggle="dropdown" aria-expanded="false">
