--- a/QuanLyCTCN/Views/DanhMuc/Details.cshtml
+++ b/QuanLyCTCN/Views/DanhMuc/Details.cshtml
@@ -5,44 +5,132 @@
     Layout = "_AdminLayout";
 }
 
-<div class="container-fluid py-4">
+@section Styles {
+    <link rel="stylesheet" href="~/css/danhmuc.css" />
+}
+
+@section Scripts {
+    <script src="~/js/danhmuc.js"></script>
+}
+
+<div class="container-fluid py-4 danhmuc-page">
     <div class="row">
         <div class="col-12">
-            <div class="card mb-4">
-                <div class="card-header pb-0">
-                    <h6>Chi tiết danh mục</h6>
+            <div class="danhmuc-card">
+                <div class="danhmuc-card-header details-mode">
+                    <h6><i class="fas fa-info-circle danhmuc-icon"></i> Chi tiết danh mục</h6>
                 </div>
                 <div class="card-body">
-                    <dl class="row">
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.TenDanhMuc)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.TenDanhMuc)
-                        </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Loai)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Loai)
-                        </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.Nhom)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.Nhom)
-                        </dd>
-                        <dt class="col-sm-2">
-                            @Html.DisplayNameFor(model => model.GhiChu)
-                        </dt>
-                        <dd class="col-sm-10">
-                            @Html.DisplayFor(model => model.GhiChu)
-                        </dd>
-                    </dl>
-                </div>
-                <div class="card-footer">
-                    <a asp-action="Edit" asp-route-id="@Model?.DanhMucId" class="btn btn-primary">Chỉnh sửa</a> |
-                    <a asp-action="Index" class="btn btn-secondary">Quay lại danh sách</a>
+                    <div class="danhmuc-delete-details">
+                        <h5><i class="fas fa-info-circle"></i> Thông tin chi tiết:</h5>
+
+                        <div class="danhmuc-detail-row">
+                            <span class="danhmuc-detail-label">
+                                <i class="fas fa-hashtag"></i> Mã danh mục:
+                            </span>
+                            <span class="danhmuc-detail-value">#@Model.DanhMucId</span>
+                        </div>
+
+                        <div class="danhmuc-detail-row">
+                            <span class="danhmuc-detail-label">
+                                <i class="fas fa-tag"></i> Tên danh mục:
+                            </span>
+                            <span class="danhmuc-detail-value">@Model.TenDanhMuc</span>
+                        </div>
+
+                        <div class="danhmuc-detail-row">
+                            <span class="danhmuc-detail-label">
+                                <i class="fas fa-list"></i> Loại:
+                            </span>
+                            <span class="danhmuc-detail-value">
+                                @if (Model.Loai == "ChiTieu")
+                                {
+                                    <span class="danhmuc-badge danhmuc-badge-expense">
+                                        <i class="fas fa-minus-circle"></i> Chi tiêu
+                                    </span>
+                                }
+                                else if (Model.Loai == "ThuNhap")
+                                {
+                                    <span class="danhmuc-badge danhmuc-badge-income">
+                                        <i class="fas fa-plus-circle"></i> Thu nhập
+                                    </span>
+                                }
+                                else
+                                {
+                                    @Model.Loai
+                                }
+                            </span>
+                        </div>
+
+                        @if (!string.IsNullOrEmpty(Model.Nhom))
+                        {
+                            <div class="danhmuc-detail-row">
+                                <span class="danhmuc-detail-label">
+                                    <i class="fas fa-layer-group"></i> Nhóm:
+                                </span>
+                                <span class="danhmuc-detail-value">
+                                    @if (Model.Nhom == "CoDinh")
+                                    {
+                                        <span class="danhmuc-badge danhmuc-badge-fixed">
+                                            <i class="fas fa-lock"></i> Cố định
+                                        </span>
+                                    }
+                                    else if (Model.Nhom == "BienDoi")
+                                    {
+                                        <span class="danhmuc-badge danhmuc-badge-variable">
+                                            <i class="fas fa-random"></i> Biến đổi
+                                        </span>
+                                    }
+                                    else
+                                    {
+                                        @Model.Nhom
+                                    }
+                                </span>
+                            </div>
+                        }
+
+                        @if (!string.IsNullOrEmpty(Model.GhiChu))
+                        {
+                            <div class="danhmuc-detail-row">
+                                <span class="danhmuc-detail-label">
+                                    <i class="fas fa-comment"></i> Ghi chú:
+                                </span>
+                                <span class="danhmuc-detail-value">
+                                    @if (string.IsNullOrEmpty(Model.GhiChu))
+                                    {
+                                        <em class='text-muted'>Không có ghi chú</em>
+                                    }
+                                    else
+                                    {
+                                        @Html.Raw(Model.GhiChu)
+                                    }
+                                </span>
+                            </div>
+                        }
+
+                        <div class="danhmuc-detail-row">
+                            <span class="danhmuc-detail-label">
+                                <i class="fas fa-clock"></i> Ngày tạo:
+                            </span>
+                            <span class="danhmuc-detail-value">@DateTime.Now.ToString("dd/MM/yyyy HH:mm")</span>
+                        </div>
+                    </div>
+
+                    <div class="danhmuc-form-group danhmuc-mt-3">
+                        <div class="danhmuc-d-flex danhmuc-gap-3 danhmuc-justify-content-between">
+                            <div>
+                                <a asp-action="Edit" asp-route-id="@Model.DanhMucId" class="danhmuc-btn danhmuc-btn-warning">
+                                    <i class="fas fa-edit danhmuc-icon"></i> Chỉnh sửa
+                                </a>
+                                <a asp-action="Delete" asp-route-id="@Model.DanhMucId" class="danhmuc-btn danhmuc-btn-danger">
+                                    <i class="fas fa-trash danhmuc-icon"></i> Xóa
+                                </a>
+                            </div>
+                            <a asp-action="Index" class="danhmuc-btn danhmuc-btn-outline-primary">
+                                <i class="fas fa-arrow-left danhmuc-icon"></i> Quay lại danh sách
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
