--- a/QuanLyCTCN/Views/NguoiDung/DangKy.cshtml
+++ b/QuanLyCTCN/Views/NguoiDung/DangKy.cshtml
@@ -16,6 +16,7 @@
         <h2 class="text-center mb-4">Đăng ký tài khoản</h2>
         
         <form asp-action="DangKy" method="post">
+            @Html.AntiForgeryToken()
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <div class="mb-3">
